--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,8 @@ default: &default
 development:
   adapter: postgresql
   encoding: unicode
-  database: riencosyns
-  username: railsuser
-  password: railspassword
+  database: postgres
+  username: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
