--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  encoding: unicode
+  username: intuo_task
+  password: password1
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  database: postgres
-  username: postgres
+  <<: *default
+  database: intuo_task_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: intuo_task_test
 
 production:
   <<: *default
